[package]
name = "tx_dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.20", features = ["blocking", "json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features = ["serde"]}
toml = "0.7.8"
clap = { version ="4.2.7", features = ["derive","cargo"] }
dirs = "3.0.2"
csv = "1.2.2"
prettytable-rs = "0.10.0"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
mockito = "1.1.0"

